--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=backend
+sever.port=5454
+
+#database configuration
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopInn?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Neelam@12345
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#jpaconfiguration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
