--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:mysql://localhost:3306/shopInn?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Neelam@12345
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
